fixed z-index bug for mobile in app.css

--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,10 @@ html{
   right: 0;
   opacity: 1;
   position: absolute;
-  z-index: -1;
+  /* z-index: -1; */
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /* background-size: contain; */
-   background-size:cover;
+  background-size:cover;
 
 }
 
